--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -8,6 +8,18 @@
 
 
     <Button
+        android:id="@+id/productlist"
+        android:layout_width="409dp"
+        android:layout_height="69dp"
+        android:text="상품 목록"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.909" />
+
+    <Button
         android:id="@+id/ju"
         android:layout_width="410dp"
         android:layout_height="80dp"
