--- a/app/src/main/res/layout/fragment_pants.xml
+++ b/app/src/main/res/layout/fragment_pants.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="바지"
+        android:layout_marginTop="60dp"
         tools:layout_editor_absoluteX="203dp"
         tools:layout_editor_absoluteY="173dp" />
 
