--- a/app/src/main/res/layout/fragment_shirts.xml
+++ b/app/src/main/res/layout/fragment_shirts.xml
@@ -12,6 +12,7 @@
         android:layout_height="100dp"
         android:text="셔츠 프래그먼트"
         android:textSize="25dp"
+        android:layout_marginTop="60dp"
         tools:layout_editor_absoluteX="178dp"
         tools:layout_editor_absoluteY="219dp" />
 
