--- a/app/src/main/res/layout/fragment_sports.xml
+++ b/app/src/main/res/layout/fragment_sports.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="스포츠"
+        android:layout_marginTop="60dp"
         tools:layout_editor_absoluteX="138dp"
         tools:layout_editor_absoluteY="184dp" />
 
