--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -5,12 +5,14 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <!-- 기본 이미지 아이콘 -->
+
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_default_image" /> <!-- 기본 이미지 아이콘 -->
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_default_image" />
 
     <TextView
         android:id="@+id/product_name"
@@ -24,7 +26,7 @@
         android:id="@+id/product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="₩00,000" />
+        android:text="₩000,000,000" />
 
     <TextView
         android:id="@+id/product_description"
