--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -41,6 +41,13 @@
         android:layout_height="wrap_content"
         android:text="이미지 선택" />
 
+    <!-- 카테고리 선택 Spinner 추가 -->
+    <Spinner
+        android:id="@+id/spinner_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
+
     <Button
         android:id="@+id/btn_save_product"
         android:layout_width="match_parent"
