--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -6,7 +6,6 @@
     android:padding="16dp">
 
     <!-- 기본 이미지 아이콘 -->
-
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="match_parent"
@@ -33,6 +32,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="상품 설명을 여기에 입력하세요." />
+
+    <!-- 카테고리 TextView 추가 -->
+    <TextView
+        android:id="@+id/product_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="카테고리"
+        android:textColor="@android:color/darker_gray"
+        android:textStyle="italic" />
 
     <Button
         android:id="@+id/button_add_to_cart"
