--- a/app/src/main/res/layout/add_product.xml
+++ b/app/src/main/res/layout/add_product.xml
@@ -32,7 +32,7 @@
         android:id="@+id/iv_product_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_default_image" /> <!-- 기본 이미지 아이콘 -->
 
     <Button
