--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -9,8 +9,8 @@
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
+        android:layout_height="200dp"
+        android:scaleType="centerInside"
         android:src="@drawable/ic_default_image" />
 
     <TextView
@@ -31,6 +31,7 @@
         android:id="@+id/product_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text="상품 설명을 여기에 입력하세요." />
 
     <!-- 카테고리 TextView 추가 -->
