--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -6,43 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.mypage.MypageFragment">
 
-
-    <Button
-        android:id="@+id/productlist"
-        android:layout_width="350dp"
-        android:layout_height="69dp"
-        android:text="상품 목록"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.975" />
-
-    <Button
-        android:id="@+id/ju"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:text="주문 내역 조회"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.353" />
-
-    <Button
-        android:id="@+id/cart"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:text="장바구니"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23" />
-
+    <!-- 고정된 상단 영역 -->
     <ImageView
         android:id="@+id/profile"
         android:layout_width="100dp"
@@ -60,6 +24,7 @@
         android:layout_width="226dp"
         android:layout_height="48dp"
         android:textSize="22dp"
+        android:hint="username"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -92,52 +57,64 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.12" />
 
-    <Button
-        android:id="@+id/center"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:text="고객센터"
+    <!-- ScrollView로 감싼 스크롤 가능한 버튼 영역 -->
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/change"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.476" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <Button
-        android:id="@+id/info"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:text="공지사항"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.599" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/logout"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:text="로그아웃"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.721" />
+            <Button
+                android:id="@+id/cart"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="장바구니" />
 
-    <Button
-        android:id="@+id/initem"
-        android:layout_width="350dp"
-        android:layout_height="69dp"
-        android:text="상품 추가"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.853" />
+            <Button
+                android:id="@+id/ju"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="주문 내역 조회" />
+
+            <Button
+                android:id="@+id/center"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="고객센터" />
+
+            <Button
+                android:id="@+id/info"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="공지사항" />
+
+            <Button
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="로그아웃" />
+
+            <Button
+                android:id="@+id/initem"
+                android:layout_width="match_parent"
+                android:layout_height="69dp"
+                android:text="상품 추가" />
+
+            <Button
+                android:id="@+id/productlist"
+                android:layout_width="match_parent"
+                android:layout_height="69dp"
+                android:text="상품 목록" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
