--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -34,7 +34,7 @@
 
 
     <Button
-        android:id="@+id/change"
+        android:id="@+id/editprofile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="정보수정"
@@ -61,7 +61,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/change"
+        app:layout_constraintTop_toBottomOf="@id/editprofile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
