--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -32,8 +32,7 @@
         android:id="@+id/usernameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text=""
-        android:hint="아이디를 표시"
+        android:text="아이디를 표시"
         android:focusable="false"
         android:clickable="false"
         app:layout_constraintTop_toBottomOf="@id/usernameLabel"
@@ -78,18 +77,38 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp" />
 
-    <EditText
-        android:id="@+id/passwordEditText"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/passwordLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="비밀번호를 입력하세요"
         app:layout_constraintTop_toBottomOf="@id/passwordLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:inputType="textPassword"
-        android:maxLines="1" />
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
+
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="비밀번호를 입력하세요"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/eyeIcon"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:layout_marginEnd="8dp" />
+
+        <ImageView
+            android:id="@+id/eyeIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_eye_off"
+            android:contentDescription="Eye Icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/emailLabel"
@@ -97,7 +116,7 @@
         android:layout_height="wrap_content"
         android:text="이메일"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
+        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp" />
@@ -150,5 +169,4 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
